--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zns-js",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "mongodb, dynamodb and kts wrapper",
   "main": "index.js",
   "scripts": {
@@ -22,10 +22,10 @@
   },
   "homepage": "https://github.com/Alex-Lin/zns-js#readme",
   "dependencies": {
-    "async": "^2.5.0",
-    "dynogels": "^8.0.1",
-    "joi": "^10.5.0",
-    "lodash": "^4.17.4",
-    "mongoose": "^4.11.3"
+    "async": "2.5.0",
+    "dynogels": "8.0.1",
+    "joi": "10.5.0",
+    "lodash": "4.17.4",
+    "mongoose": "4.11.3"
   }
 }
